--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,11 @@
   margin: 0;
   padding: 0;
   user-select: none;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 body {
