--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap");
+
 *,
 *::before,
 *::after {
@@ -26,4 +28,8 @@ body {
 input {
   border: 0;
   outline: 0;
+}
+
+.font-orbitron {
+  font-family: "Orbitron", monospace;
 }
