--- a/src/index.scss
+++ b/src/index.scss
@@ -33,3 +33,9 @@ input {
 .font-orbitron {
   font-family: "Orbitron", monospace;
 }
+
+.bgpic {
+  background-image: url("./assets/bgpic.png");
+  background-position: center 20px;
+  background-repeat: no-repeat;
+}
