--- a/src/index.scss
+++ b/src/index.scss
@@ -35,7 +35,7 @@ input {
 }
 
 .bgpic {
-  background-image: url("./assets/crashbg.png");
+  background-image: url("./assets/crashbg.svg");
   background-position: center 20px;
   background-repeat: no-repeat;
 }
